# ML-zoomcamp-homework

./: HomeworkML3.ipynb  MLhomework1.ipynb  MLhomework4.ipynb  README.md
02- Regression/: MLhomework2.ipynb
03- Classification/: MLhomework3.ipynb
04- Evaluation/: MLhomework4.ipynb
05- Deployment/: Dockerfile  pickle_score.py  predict_lead.py  predict_lead_test.py  pyproject.toml
06- Decision-tree-and-Ensemble-learning/: MLhomework6.ipynb
